updated name from vendor to restaurant
