# src/api/index.ts
@@ -1,10 +1,10 @@
 import express from "express";
-import { HealthCheckRoute, AdminRoute, VendorRoute, CustomerRoute, DeliveryRoute, ShoppingRoute, RiderRoute } from "../routes";
+import { HealthCheckRoute, AdminRoute, RestaurantRoute, CustomerRoute, DeliveryRoute, ShoppingRoute, RiderRoute } from "../routes";
 const router = express.Router();
 
 router.use("/", HealthCheckRoute);
 router.use("/admin", AdminRoute);
-router.use("/vendor", VendorRoute);
+router.use("/restaurant", RestaurantRoute);
 router.use("/customer", CustomerRoute);
 router.use("/delivery", DeliveryRoute);
 router.use("/rider", RiderRoute);
