# src/controllers/index.ts
@@ -1,5 +1,5 @@
 export * from "./admin.controller";
-export * from "./vendor.controller";
+export * from "./restaurant.controller";
 export * from "./customer.controller";
 export * from "./shopping.controller";
 export * from "./delivery.controller";
