# src/routes/index.ts
@@ -1,6 +1,6 @@
 export * from "./healthCheck.route";
 export * from "./admin.route";
-export * from "./vendor.route";
+export * from "./restaurant.route";
 export * from "./shopping.route";
 export * from "./customer.route";
 export * from "./delivery.route";
